// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordStrengthComponent should show five indicators 1`] = `
<app-password-strength
  items={[Function Array]}
  result={[Function Number]}
>
  <div
    class="password-strength strong-pass"
    ng-reflect-klass="password-strength"
    ng-reflect-ng-class="[object Object]"
  >
    
    <div />
    <div />
    <div />
    <div />
    <div />
  </div>
</app-password-strength>
`;

exports[`PasswordStrengthComponent should show four indicators 1`] = `
<app-password-strength
  items={[Function Array]}
  result={[Function Number]}
>
  <div
    class="password-strength good-pass"
    ng-reflect-klass="password-strength"
    ng-reflect-ng-class="[object Object]"
  >
    
    <div />
    <div />
    <div />
    <div />
  </div>
</app-password-strength>
`;

exports[`PasswordStrengthComponent should show one indicators 1`] = `
<app-password-strength
  items={[Function Array]}
  result={[Function Number]}
>
  <div
    class="password-strength worst-pass"
    ng-reflect-klass="password-strength"
    ng-reflect-ng-class="[object Object]"
  >
    
    <div />
  </div>
</app-password-strength>
`;

exports[`PasswordStrengthComponent should show three indicators 1`] = `
<app-password-strength
  items={[Function Array]}
  result={[Function Number]}
>
  <div
    class="password-strength weak-pass"
    ng-reflect-klass="password-strength"
    ng-reflect-ng-class="[object Object]"
  >
    
    <div />
    <div />
    <div />
  </div>
</app-password-strength>
`;

exports[`PasswordStrengthComponent should show two indicators 1`] = `
<app-password-strength
  items={[Function Array]}
  result={[Function Number]}
>
  <div
    class="password-strength bad-pass"
    ng-reflect-klass="password-strength"
    ng-reflect-ng-class="[object Object]"
  >
    
    <div />
    <div />
  </div>
</app-password-strength>
`;

exports[`PasswordStrengthComponent shouldn't show any indicators 1`] = `
<app-password-strength
  items={[Function Array]}
>
  <div
    class="password-strength"
    ng-reflect-klass="password-strength"
    ng-reflect-ng-class="[object Object]"
  >
    
  </div>
</app-password-strength>
`;
